# AccountPulse

./: .env.example  .gitignore  README.md  agent.py  app.py  hubspot_live_demo_status.txt  northwind_report_acc001.txt  northwind_report_live.txt  pyproject.toml  requirements.txt
presentation/: CHECKLIST.md  PHASE0_PATHFINDER.md  README.md  SCRIPT.md
presentation/evidence/: evidence.html  northwind_report.txt  pathfinder_v2_confirmation.md  pytest_results.txt
scripts/: gmail_oauth_setup.py  send_posthog_demo_events.py  verify_hubspot_crm.py
tests/: test_build_account_health_report.py  test_dates.py  test_get_communication_activity.py  test_get_crm_account_data.py  test_get_product_usage.py  test_get_support_ticket_data.py  test_get_support_tickets.py  test_morning_briefing.py  test_phase3_live_providers.py
tools/: HUBSPOT_RECORDS.md  README.md  __init__.py  _http.py  dates.py
tools/communications/: __init__.py  get_communication_activity.py  gmail_client.py  mock_data.py
tools/crm/: __init__.py  get_crm_account_data.py  hubspot_client.py  mock_data.py  models.py
tools/report/: __init__.py  build_account_health_report.py
tools/support/: __init__.py  get_support_ticket_data.py  get_support_tickets.py  mock_data.py  zendesk_client.py
tools/usage/: __init__.py  gainsight_client.py  get_product_usage.py  mock_data.py  posthog_client.py
