[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "accountpulse"
version = "0.1.0"
description = "AccountPulse Customer Success agent tools"
readme = "tools/README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.0",
    "python-dotenv>=1.0",
    "litellm>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
